# sigil

./: .gitignore  README.md  pyproject.toml
benchmarks/: bench_protocols.py  conftest.py
benchmarks/results/: full_glm47.json  full_haiku.json  full_opus.json  full_sonnet.json  mock_compliant.json  mock_noncompliant.json
src/sigil/: __init__.py  __main__.py  cli.py  protocol.py
src/sigil/attacks/: __init__.py  catalog.py  categories.py
src/sigil/attacks/payloads/: __init__.py  context_manipulation.py  delimiter_escape.py  direct_override.py  encoding.py  indirect.py  payload_smuggling.py  persona_hijack.py  pliny.py  propagation.py
src/sigil/evaluation/: __init__.py  metrics.py  reporter.py  runner.py
src/sigil/protocols/: __init__.py  canary.py  clean_filtered.py  combined.py  hmac_challenge.py  nonce_echo.py  none.py  schema_strict.py
src/sigil/providers/: __init__.py  anthropic.py  base.py  claude_code.py  mock.py  openai.py  zai.py
tests/: conftest.py  test_attacks.py  test_protocols.py
