[project]
name = "sigil"
version = "0.1.0"
description = "Agent-to-agent communication protocol with prompt injection detection"
readme = "README.md"
authors = [
    { name = "Nathan Rice", email = "nathan.alexander.rice@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "sibylline-clean[all]>=0.1.2",
    "sklearn-crfsuite>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "rich>=13.0",
]

[project.scripts]
sigil = "sigil.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
python_files = ["test_*.py", "bench_*.py"]
markers = [
    "mock: tests using mock provider only",
    "anthropic: tests requiring Anthropic API key",
    "openai: tests requiring OpenAI API key",
]
asyncio_mode = "auto"
